# icar-ng

./: .gitignore  .gitmodules  LICENSE.md  README.md  cmd_build.bash  cmd_launch_camera_dataset_labeler.bash  cmd_launch_icar3.bash  cmd_launch_pixel_cm_visualizer.bash
.devcontainer/: Dockerfile
notebook/: cm2pixel_training.ipynb  pixel2cm_training.ipynb  visualization.ipynb
src/icar_bringup/: CMakeLists.txt  package.xml
src/icar_bringup/launch/: camera_dataset_labeler_launch.py  icar3_launch.py  pixel_cm_visualizer_launch.py
src/icar_interfaces/: CMakeLists.txt  package.xml
src/icar_interfaces/msg/: GpsToPc.msg  LidarRings.msg  Stm32FromPc.msg  Stm32ToPc.msg
src/icar_interfaces/srv/: PixelCMInference.srv  PxCmInference.srv
src/icar_io/: CMakeLists.txt  package.xml
src/icar_io/src/: io_gps.cpp  io_lslidar_c16.cpp  io_lslidar_n301.cpp  io_stm32.cpp  stm32.cpp
src/icar_middleware/: CMakeLists.txt  package.xml
src/icar_middleware/src/: lidar_transform.cpp  pixel_cm_inference.cpp  pose_estimator.cpp  px_cm_inference.cpp  road_segmentation.cpp  transform_broadcaster.cpp
src/icar_routine/: CMakeLists.txt  package.xml
src/icar_routine/include/icar_routine/: routine.hpp
src/icar_routine/src/: routine_main.cpp  routine_motion.cpp  routine_process.cpp
src/icar_utilities/: CMakeLists.txt  package.xml
src/icar_utilities/src/: camera_dataset_labeler.cpp  pixel_cm_visualizer.cpp
src/lwgps/: CMakeLists.txt  package.xml
src/lwgps/include/lwgps/: lwgps_opts.h
